--- a/readme.html
+++ b/readme.html
@@ -1140,13 +1140,13 @@ server from a browser in relatively safe way</p>
 <h3 id="installing-python">Installing Python</h3>
 <p>Please follow this link to install Python(&gt;=3.9): <a href="https://www.python.org/downloads/">https://www.python.org/downloads/</a></p>
 <p>Install and activate a virtual python environment</p>
-<pre><code>cd /your/DeploySevice
+<pre><code>cd /your/webrun
 
 # install virtual python environment
 python -m venv .venv</code></pre>
 <h3 id="activate-the-virtual-python-environment">Activate the virtual
 python environment</h3>
-<pre><code>cd /your/DeploySevice
+<pre><code>cd /your/webrun
 source .venv/bin/activate</code></pre>
 <blockquote>
 <p>Please make sure you have activated the virtual environment before
@@ -1155,7 +1155,7 @@ running any command in this manual</p>
 <p>Confirm the python path</p>
 <p><code>which python</code></p>
 <p>It should show the path like this:
-<code>/your/DeployService/.venv/bin/python ...</code></p>
+<code>/your/webrun/.venv/bin/python ...</code></p>
 <h3 id="install-dependent-packages">Install dependent packages</h3>
 <pre><code>pip install -r requirements.txt</code></pre>
 <h2 id="usage">Usage</h2>
@@ -1174,7 +1174,7 @@ openssl req -new -key cert/server.key -out cert/server.csr
 openssl x509 -req -days 3650 -in cert/server.csr -signkey cert/server.key -out cert/server.crt
 
 # start service
-gunicorn -b 0.0.0.0:44300 --keyfile /your/DeployService/cert/server.key --certfile /your/DeployService/cert/server.crt start:app</code></pre>
+gunicorn -b 0.0.0.0:44300 --keyfile /your/webrun/cert/server.key --certfile /your/webrun/cert/server.crt start:app</code></pre>
 <h3 id="access-from-a-browser">Access from a browser</h3>
 <p>It can be accessed from a browser by address:
 <strong>https://your-server:44300</strong></p>
@@ -1190,9 +1190,9 @@ background</h3>
 <p>It can be run as a background service by <code>supervisord</code>: <a href="http://supervisord.org"><span>http://supervisord.org</span></a></p>
 <p>Just make sure the command which will be added into configuration of
 <code>supervisord</code> as the following:</p>
-<pre><code>/your/DeploySevice/.venv/bin/python /your/DeploySevice/start.py</code></pre>
+<pre><code>/your/webrun/.venv/bin/python /your/webrun/start.py</code></pre>
 <p>or</p>
-<pre><code>/your/DeploySevice/.venv/bin/gunicorn -b 0.0.0.0:44300 --keyfile /your/DeployService/cert/server.key --certfile /your/DeployService/cert/server.crt start:app</code></pre>
+<pre><code>/your/webrun/.venv/bin/gunicorn -b 0.0.0.0:44300 --keyfile /your/webrun/cert/server.key --certfile /your/webrun/cert/server.crt start:app</code></pre>
 <h2 id="configuration-file">Configuration File</h2>
 <p>Configuration file <code>env.json</code> should be in the root
 directory.</p>
